# PocketRelayPluginInstaller

./: .gitignore  Cargo.toml  LICENSE.md  Makefile.toml  README.md  build.rs  cspell.json
.cargo/: config.toml
.github/workflows/: build-tagged-release.yml  build.yml
src/: app.rs  bink.rs  github.rs  iced.rs  main.rs  plugin.rs  ui.rs
