[package]
name = "pocket-relay-plugin-installer"
version = "0.0.1"
edition = "2021"
build = "build.rs"
license = "MIT"
description = "Patcher and plugin installer application for Pocket Relay"
readme = "README.md"
authors = ["Jacobtread <jacobtread@gmail.com>"]
keywords = ["EA", "PocketRelay", "MassEffect"]

[build-dependencies]
winres = "0.1"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }

# Tokio async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.10"

# Native dialogs when using the iced variant
native-dialog = "0.7"

# Hashing
sha256 = "1.5.0"

# HTTP client (TODO: USE RUSTLS TO PREVENT NATIVE LINKING TO OPENSSL)
reqwest = { version = "0.12", features = ["json"] }

# Byte buffers
bytes = "1.4.0"


# Iced GUI framework variant
[dependencies.iced]
version = "0.10"
features = ["image", "tokio"]

[profile.release]
strip = true
lto = true
codegen-units = 1
